# app/api/admin/employees/[id]/route.ts
@@ -1,3 +1,0 @@
-import { deleteEmployee } from "@/app/api/routers/admin";
-
-export const DELETE = deleteEmployee;
